<resources>
    <string name="app_name">Hello World 2020</string>
    <string name="hello_label">Hello World!</string>
    <string name="hint_first_number">First number</string>
    <string name="hint_second_number">Second number</string>
    <string name="number_error">You must enter both numbers</string>
    <string name="div_by_zero">Cannot divide by zero</string>
    <string name="selectHistoryValue">Select</string>
    <string name="cancel">Cancel</string>
    <string name="show_history">Show history</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="history_canceled">Canceled</string>
    <string name="call">Call number</string>
</resources>
